--- a/css/styles.css
+++ b/css/styles.css
@@ -14,7 +14,8 @@ body {
 /* Styles for custom classes in the document. (There are more, try to find them out!) */
 
 .resume-header {
-    background-color: #e0f0ff;
+    background-color: #A0E1C8;
+	Color: White
 }
 
 .resume-main {
@@ -22,7 +23,8 @@ body {
 }
 
 .resume-aside {
-	background-color: #fff0e0;
+	background-color: #A0E1C8;
+	Color: White
 }
 
 /* Styles for lists in the document */
@@ -36,7 +38,7 @@ body {
 }
 
 .biography-details li::before {
-	color: #EE7623;
+	color: #FFFFFF;
 }
 
 .biography-details li, .skill-list li {
